# rabbit

./: Cargo.toml  README.md
src/cli/: main.rs
src/lib/: doc.rs  index.rs  lib.rs  tantivy_jieba.rs
